--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "sass": "^1.83.4",
         "sass-loader": "^16.0.4",
         "style-loader": "^1.1.3",
+        "supertest": "^7.0.0",
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.0"
